--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,7 +12,7 @@ GOV.UK Universal Content Type
     <div class="govuk-grid-column-two-thirds">
 
 
-      <p><a href="universal-type-features">Universal content type - basic features</a</p>
+      <p><a href="universal-type-features-banner">Universal content type - basic features</a</p>
 
 
 
