--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -90,6 +90,7 @@ padding: 50px 0 40px 0;
 .logo {
   border-left: 3px solid black;
   margin-right: 5px;
+  padding-top: 10px;
 }
 
 .dept-name {
@@ -134,4 +135,9 @@ padding: 50px 0 40px 0;
 
 .content-type-body {
   padding-top: 30px;
+}
+
+.devolved-admin-picker {
+  background: $govuk-border-colour;
+  padding: 10px;
 }
