--- a/app/views/universal-type-features-banner.html
+++ b/app/views/universal-type-features-banner.html
@@ -34,10 +34,14 @@
          </li>
        </ol>
      </div>
+
+     <!-- Research banner -->
+     <!--
          <div class="research-banner">
            <p class="govuk-body-s">Research banner with <a href="#">link to a survey</a></p>
            </div>
-
+         -->
+             <!-- Logo / crest -->
            <div class="logo">
              <div class="crest"></div>
              <div class="dept-name">
@@ -47,7 +51,7 @@
 
          <h1 class="govuk-heading-xl">Heading H1</h1>
 
-         <p class="content-type-name">Content type name 
+         <p class="content-type-name">Content type name
          <span class="content-desc">&mdash; Example of a description, which may be a few lines long, and it follows the content type name, which may have a role in helping users understand the type and purpose of the document (or it may not).</span></p>
 
          <div class="page-actions-button">
@@ -90,7 +94,7 @@
 
 
 
-
+             <!--
              <aside class="" role="complementary">
                <nav class="app-contents-list" aria-label="Pages in this guide" role="navigation">
                  <h2 class="app-contents-list__title">
@@ -115,11 +119,22 @@
                  </ol>
                </nav>
              </aside>
+            -->
 
+
+            <!-- Devolved Administration picker -->
+            <div class="devolved-admin-picker">
+            <h2 class="govuk-heading-xs">This guidance applies to England</h2>
+            <p class="s">See more guidance for <a href="#">Wales</a>, <a href="#">Scotland</a> and <a href="#">Northern Ireland</a></p>
+            </div>
+
+            <!-- Main content -->
            <p>This is an example of the first section of page of content.</p>
          </div>
 
          <div class="govuk-grid-column-one-third">
+
+           <!-- Rel links -->
            <h2 class="govuk-heading-m app-related-items" id="subsection-title">
              Related links
            </h2>
