--- a/app/views/universal-type-features-banner.html
+++ b/app/views/universal-type-features-banner.html
@@ -85,11 +85,20 @@
      <div class="govuk-width-container content-type-body">
        <div class="govuk-grid-row">
          <div class="govuk-grid-column-two-thirds">
+
            <div class="metadata">
-             <span class="govuk-body-s">From: Cabinet Office</br>
-             From: Department Name</br>
-             Published: 27 September 2022</br>
-             </span>
+            <div class="from-place">
+              <p class="govuk-body-s"><span class="strong">From:</span> Cabinet Office</p>
+            </div>
+
+              <div class="from-place">
+            <p class="govuk-body-s"><span class="strong">From: </span> Department Name</p>
+            </div>
+
+            <div class="publish-date">
+            <p class="govuk-body-s"><span class="strong">Published:</span> 27 September 2022 <a href="#">See all updates</a></p>
+             </div>
+
              </div>
 
 
@@ -124,8 +133,24 @@
 
             <!-- Devolved Administration picker -->
             <div class="devolved-admin-picker">
-            <h2 class="govuk-heading-xs">This guidance applies to England</h2>
-            <p class="s">See more guidance for <a href="#">Wales</a>, <a href="#">Scotland</a> and <a href="#">Northern Ireland</a></p>
+              <div class="devolved-admin-picker-selected">
+            <p class="govuk-body-m">This guidance applies to England</span>
+            </div>
+            <div class="devolved-admin-picker-nations">
+            <p class="govuk-body-s">See more guidance for <a href="#">Wales</a>, <a href="#">Scotland</a> and <a href="#">Northern Ireland</a></p>
+            </div>
+            </div>
+
+            <!-- Generic notice -->
+
+            <div class="generic-notice">
+              <div class="generic-notice-title">
+            <h2 class="govuk-heading-s">This is an example of a notice title</h2>
+            </div>
+
+            <div class="generic-notice-body">
+            <p>This is an example of a notice body</p>
+            </div>
             </div>
 
             <!-- Main content -->
