--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -131,7 +131,7 @@ padding: 50px 0 40px 0;
   margin: 0 auto;
   display: block;
   clear: both;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
 }
 
 .metadata p {
@@ -149,7 +149,7 @@ padding: 50px 0 40px 0;
 }
 
 .content-type-body {
-  padding-top: 30px;
+  padding-top: 10px;
 }
 
 .devolved-admin-picker {
@@ -200,4 +200,8 @@ margin-bottom: -5px;
 
 .generic-notice-title h2 {
   margin-bottom: -5px;
+}
+
+.main-content {
+  margin-top: 10px;
 }
