--- a/app/views/universal-type-features-banner.html
+++ b/app/views/universal-type-features-banner.html
@@ -49,7 +49,7 @@
                </div>
              </div>
 
-         <h1 class="govuk-heading-xl">Heading H1</h1>
+         <h1 class="govuk-heading-xl">Heading H1 example</h1>
 
          <p class="content-type-name">Content type name
          <span class="content-desc">&mdash; Example of a description, which may be a few lines long, and it follows the content type name, which may have a role in helping users understand the type and purpose of the document (or it may not).</span></p>
@@ -100,89 +100,78 @@
              </div>
 
              </div>
+             </div>
+             </div>
+
+             <div class="govuk-width-container content-type-body">
+               <div class="govuk-grid-row">
+                 <div class="govuk-grid-column-two-thirds">
+                   <!-- Devolved Administration picker -->
+                   <div class="devolved-admin-picker">
+                     <div class="devolved-admin-picker-selected">
+                   <p class="govuk-body-m">This guidance applies to England</span>
+                   </div>
+                   <div class="devolved-admin-picker-nations">
+                   <p class="govuk-body-s">See more guidance for <a href="#">Wales</a>, <a href="#">Scotland</a> and <a href="#">Northern Ireland</a></p>
+                   </div>
+                   </div>
+
+                   <!-- Main content -->
+                   <div class="main-content">
+                     <h2 class="govuk-heading-m">Subheading H2 example</h2>
+                  <p>This is an example of the first section of page of content. It will usually have several paragraphs, and sometimes it will have a menu of contents to make it easier to skip to sections.</p>
+
+                  <p>It may have links, images, and GovSpeak. There will be related content shown to the right of the content,
+                  and there may also be notices.</p>
+                  </div>
+
+                   <!-- Generic notice -->
+
+                   <div class="generic-notice">
+                     <div class="generic-notice-title">
+                   <h2 class="govuk-heading-s">This is an example of a notice title</h2>
+                   </div>
+
+                   <div class="generic-notice-body">
+                   <p>This is an example of a notice body</p>
+                   </div>
+                   </div>
+
+
+                </div>
+
+                   <div class="govuk-grid-column-one-third">
+                     <!-- Rel links -->
+                     <h2 class="govuk-heading-m app-related-items" id="subsection-title">
+                       Related links
+                     </h2>
+                     <nav role="navigation" aria-labelledby="subsection-title">
+                       <ul class="govuk-list govuk-!-font-size-16">
+                         <li>
+                           <a href="#">
+                             Related link
+                           </a>
+                         </li>
+                         <li>
+                           <a href="#">
+                             Related link
+                           </a>
+                         </li>
+                         <li>
+                           <a href="#" class="govuk-!-font-weight-bold">
+                             More <span class="govuk-visually-hidden">in Subsection</span>
+                           </a>
+                         </li>
+                       </ul>
+                     </div>
+                   </div>
+                   </div>
 
 
 
-             <!--
-             <aside class="" role="complementary">
-               <nav class="app-contents-list" aria-label="Pages in this guide" role="navigation">
-                 <h2 class="app-contents-list__title">
-                   Contents
-                 </h2>
-                 <ol class="app-contents-list__list">
-                   <li class="app-contents-list__list-item app-contents-list__list-item--dashed app-contents-list__list-item--active">
-                     <a href="#">
-                       Section one
-                     </a>
-                   </li>
-                   <li aria-current="true" class="app-contents-list__list-item app-contents-list__list-item--dashed">
-                     <a href="#">
-                      Section two
-                      </a>
-                   </li>
-                   <li class="app-contents-list__list-item app-contents-list__list-item--dashed">
-                     <a href="#">
-                       Section three
-                     </a>
-                   </li>
-                 </ol>
-               </nav>
-             </aside>
-            -->
 
 
-            <!-- Devolved Administration picker -->
-            <div class="devolved-admin-picker">
-              <div class="devolved-admin-picker-selected">
-            <p class="govuk-body-m">This guidance applies to England</span>
-            </div>
-            <div class="devolved-admin-picker-nations">
-            <p class="govuk-body-s">See more guidance for <a href="#">Wales</a>, <a href="#">Scotland</a> and <a href="#">Northern Ireland</a></p>
-            </div>
-            </div>
 
-            <!-- Generic notice -->
-
-            <div class="generic-notice">
-              <div class="generic-notice-title">
-            <h2 class="govuk-heading-s">This is an example of a notice title</h2>
-            </div>
-
-            <div class="generic-notice-body">
-            <p>This is an example of a notice body</p>
-            </div>
-            </div>
-
-            <!-- Main content -->
-           <p>This is an example of the first section of page of content.</p>
-         </div>
-
-         <div class="govuk-grid-column-one-third">
-
-           <!-- Rel links -->
-           <h2 class="govuk-heading-m app-related-items" id="subsection-title">
-             Related links
-           </h2>
-           <nav role="navigation" aria-labelledby="subsection-title">
-             <ul class="govuk-list govuk-!-font-size-16">
-               <li>
-                 <a href="#">
-                   Related link
-                 </a>
-               </li>
-               <li>
-                 <a href="#">
-                   Related link
-                 </a>
-               </li>
-               <li>
-                 <a href="#" class="govuk-!-font-weight-bold">
-                   More <span class="govuk-visually-hidden">in Subsection</span>
-                 </a>
-               </li>
-             </ul>
-         </div>
-       </div>
 
          </div>
 
