--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,7 +12,11 @@ GOV.UK Universal Content Type
     <div class="govuk-grid-column-two-thirds">
 
 
-      <p><a href="universal-type-features-banner">Universal content type - basic features</a</p>
+        <h2 class="govuk-heading-m">Template</h2>
+      <p><a href="universal-type-features-banner">Universal content format - basic features</a></p>
+
+        <h2 class="govuk-heading-m">Content examples</h2>
+      <p><a href="blue-badge-can-i-get-one">Guidance page: Who can get a Blue Badge</a</p>
 
 
 
