--- a/app/views/blue-badge-can-i-get-one.html
+++ b/app/views/blue-badge-can-i-get-one.html
@@ -7,7 +7,7 @@
  {{ pageHeading }} - GOV.UK
 {% endblock %}
 
-{% set pageHeading = 'Universal Content Type' %}
+{% set pageHeading = 'Universal Content Format' %}
 
 {% block beforeContent %}
 {# beforeContent is reseting default phase banner #}
