Add content structures 1 and 2

--- a/app/views/blue-badge-can-i-get-one.html
+++ b/app/views/blue-badge-can-i-get-one.html
@@ -336,32 +336,30 @@ An organisation may be eligible for a badge (or multiple badges), if they both:<
 Common examples of organisations that may be eligible include residential care homes, hospices or local council social services departments. It is unlikely that taxi or private hire operators and community transport operators would be eligible for an organisational Blue Badge as they are not usually concerned with the care of disabled people.
 </p>
 
-<h2 class="govuk-heading-m">
-Related guidance
-</h2>
 
-<h2 class="govuk-heading-s">
-Blue Badges: your rights and responsibilities
-</h2>
+<h2 class="govuk-heading-m">Apply for a Blue Badge</h2>
+<p>In <a href="https://www.gov.uk/apply-blue-badge">England, Scotland and Wales you can apply on GOV.UK</a> for a Blue Badge.</p>
 
-<p>The way a Blue Badge can be used differs in England, Scotland and Wales:</p>
+<p>This guidance applies in England. Guidance is also available for <a href="#">Scotland</a> and <a href="#">Wales</a>.</p>
 
-<ul class="govuk-list govuk-list--bullet">
+<p>There’s a different way to apply if you're in Northern Ireland.</p>
 
-<li><a href="#">Blue Badge rules for England</a></li>
-<li><a href="#">Blue Badge rules for Northern Ireland</a></li>
-<li><a href="#">Blue Badge rules for Scotland</a></li>
-<li><a href="#">Blue Badge rules for Wales</a></li>
-</ul>
+<p class="govuk-heading-s"><a href="#">Apply for a Blue Badge in England, Scotland and Wales</a></p>
 
+
+                      <div class="documents-chunk">
                      <h2 class="govuk-heading-m">Documents</h2>
+                     <p>A placeholder for documents intro text</p>
+                     </div>
 
+                     <!--
                      <div class="doc-container">
                      <div class="doc-icon">
                        </div>
                        <p class="govuk-body-l"><a href="#">Who can get a Blue Badge?</a></p>
                        <p class="govuk-body-s">HTML</p>
                        </div>
+                       -->
 
 
                        <div class="doc-container">
@@ -411,7 +409,7 @@ Blue Badges: your rights and responsibilities
                              <p class="govuk-body-s">http://assets.dft.gov.uk/publications/blue-badge-audio/who-can-get-a-blue-badge.mp3</p>
                             </div>
 
-
+                      <!--
                      <h2 class="govuk-heading-m">Details</h2>
                      <p>A guide to who qualifies for a Blue Badge, including:</p>
                      <ul class="govuk-list govuk-list--bullet">
@@ -422,13 +420,8 @@ Blue Badges: your rights and responsibilities
                        <li>providing proof of benefits and eligibility</li>
                        <li>badges for organisations</li>
                        </ul>
+                       -->
 
-                        <h2 class="govuk-heading-m">Apply for a Blue Badge</h2>
-                       <p>In <a href="https://www.gov.uk/apply-blue-badge">England, Scotland and Wales you can apply on GOV.UK</a> for a Blue Badge.</p>
-
-                       <p>This guidance applies in England. Guidance is also available for <a href="#">Scotland</a> and <a href="#">Wales</a>.</p>
-
-                       <p>There’s a different way to apply if you're in Northern Ireland.</p>
 
 
                        <div class="change-notes">
