--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,7 +16,9 @@ GOV.UK Universal Content Type
       <p><a href="universal-type-features-banner">Universal content format - basic features</a></p>
 
         <h2 class="govuk-heading-m">Content examples</h2>
-      <p><a href="blue-badge-can-i-get-one">Guidance page: Who can get a Blue Badge</a</p>
+      <p><a href="blue-badge-can-i-get-one">Guidance page: Who can get a Blue Badge (full text)</a</p>
+        <p><a href="blue-badge-can-i-get-one">Guidance page: Who can get a Blue Badge (downloads)</a</p>
+
 
 
 
