--- a/app/views/blue-badge-can-i-get-one-downloads.html
+++ b/app/views/blue-badge-can-i-get-one-downloads.html
@@ -120,21 +120,29 @@
                    <!-- Main content -->
                    <div class="main-content">
 
-                  
+
 
                       <div class="documents-chunk">
                      <h2 class="govuk-heading-m">Documents</h2>
-                     <p>A placeholder for documents intro text</p>
+
+                     <p>Accessible guidance on who qualifies for a Blue Badge, including:</p>
+
+                     <ul class="govuk-list govuk-list--bullet">
+                     <li>who automatically qualifies for a Blue Badge</li>
+                     <li>people who may qualify</li>
+                     <li>applying for a Blue Badge with a non-visible (hidden) condition</li>
+                     <li>what you need to apply</li>
+                     <li>providing proof of benefits and eligibility</li>
+                     <li>badges for organisations</li>
+                     </ul>
+
+                     <div class="cta-block">
+                     <p>
+                     <a href="#">Apply for a Blue Badge</a> if you're in England, Wales or Scotland.
+                     </p>
+                     </div>
                      </div>
 
-                     <!--
-                     <div class="doc-container">
-                     <div class="doc-icon">
-                       </div>
-                       <p class="govuk-body-l"><a href="#">Who can get a Blue Badge?</a></p>
-                       <p class="govuk-body-s">HTML</p>
-                       </div>
-                       -->
 
 
                        <div class="doc-container">
